# AggregatesToTuples

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  full_build.py
generators/: CMakeLists.txt
generators/arity_functions/: CMakeLists.txt  main.cpp
generators/single_include/: CMakeLists.txt  main.cpp
gluer/: CMakeLists.txt  gluer.cpp
include/: aggregates_to_tuples.hpp  arity_functions.inl  comparisons.hpp  core.hpp  equality.hpp  hash.hpp  loops.hpp  serialization.hpp  tools.hpp  utils.hpp
single_include/: aggregates_to_tuples.hpp
tests/: basics.cpp  comparisons.cpp  core.cpp  equality.cpp  hash.cpp  loops.cpp  printer.cpp  serialization.cpp
